[gd_scene load_steps=2 format=3 uid="uid://bp4tbokjd2sbh"]

[ext_resource type="Script" path="res://PlayButton.gd" id="1_3qd4t"]

[node name="Menu" type="Node2D"]
position = Vector2(200, 150)
script = ExtResource("1_3qd4t")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(400, 300)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.479351, 0.849691, 0.507592, 1)

[node name="Display" type="Control" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 3
anchors_preset = 0
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="Pikmin_HeardLB" type="RichTextLabel" parent="Display"]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 0
offset_right = 400.0
offset_bottom = 40.0
theme_override_colors/table_border = Color(0, 0, 0, 1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Pikmin heard: "
scroll_active = false

[node name="ClockLB" type="RichTextLabel" parent="Display"]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 0
offset_top = 277.0
offset_right = 400.0
offset_bottom = 300.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
scroll_active = false

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -15.5
offset_right = 20.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 100
text = "Play"

[node name="EventManager" type="Node" parent="."]
unique_name_in_owner = true

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 60.0

[connection signal="pressed" from="Button" to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
